package ca.mcmaster.cas.se2aa4.a2.island.path;

import ca.mcmaster.cas.se2aa4.a2.island.tile.TileColors;

import java.awt.*;

public class PathColor {
    public static final Color RIVER_COLOR = TileColors.LAND_WATER;
    public static final Color TRANSPARENT_COLOR = new Color(0, 0, 0, 0);
}
